--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               </div>
             </div>
             
-            <div class="col-md-5 col-lg-6">
+            <div class="col-md-5 col-sm-12 col-lg-6">
               <div class="row row-30 justify-content-center">
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <div class="oh-desktop">
